# Automatic-

./: CMakeLists.txt  README.md
include/: CLI.h  Encryptor.h  Scheduler.h  Task.h  TaskManager.h
src/: CLI.cpp  Encryptor.cpp  Scheduler.cpp  Task.cpp  TaskManager.cpp  main.cpp
